import { Tabs } from 'expo-router';
import useColorScheme from '@/hooks/useColorScheme';
import { AntDesign } from '@expo/vector-icons';
import { colors } from '@/theme';

export default function TabLayout() {
  const { isDark } = useColorScheme();
  return (
    <Tabs
      screenOptions={{
        headerShown: false,
        tabBarInactiveTintColor: colors.gray,
        tabBarInactiveBackgroundColor: isDark ? colors.blackGray : colors.white,
        tabBarActiveTintColor: colors.lightPurple,
        tabBarActiveBackgroundColor: isDark ? colors.blackGray : colors.white,
      }}>
      <Tabs.Screen
        name="index"
        options={{
          href: null,
        }}
      />
      <Tabs.Screen
        name="home"
        options={{
          title: 'Home',
          tabBarIcon: ({ color }) => <AntDesign name="home" size={24} color={color} />,
        }}
      />
      <Tabs.Screen
        name="profile"
        options={{
          title: 'Profile',
          tabBarIcon: ({ color }) => <AntDesign name="profile" size={24} color={color} />,
        }}
      />
      <Tabs.Screen
        name="replay-lab/index"
        options={{
          title: 'Replay Lab',
          tabBarIcon: ({ color }) => <AntDesign name="video-camera" size={24} color={color} />,
        }}
      />
      <Tabs.Screen
        name="stress/index"
        options={{
          title: 'Stress',
          tabBarIcon: ({ color }) => <AntDesign name="dashboard" size={24} color={color} />,
        }}
      />
      <Tabs.Screen
        name="map"
        options={{
          title: 'Map',
          tabBarButtonTestID: 'tab-map',
          tabBarIcon: ({ color }) => <AntDesign name="pushpin" size={24} color={color} />,
        }}
      />
      <Tabs.Screen
        name="mapbox"
        options={{
          title: 'Mapbox',
          tabBarButtonTestID: 'tab-mapbox',
          tabBarIcon: ({ color }) => <AntDesign name="environment" size={24} color={color} />,
        }}
      />
    </Tabs>
  );
}
