...
  }, []);

  return (
    <View style={styles.root}>
      <Mask style={styles.map}>
        <MapView
          testID="native-map"
          style={StyleSheet.absoluteFillObject}
          initialRegion={{
            latitude: 37.7882,
            longitude: -122.4074,
            latitudeDelta: 0.03,
            longitudeDelta: 0.03,
...
